--- a/style.css
+++ b/style.css
@@ -1,51 +1,136 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none; 
+}
+
+body {
+    font-size: 100%;
+    background: linear-gradient(68.15deg, #2F2325 16.62%, #8E5D52 85.61%);
+}
+
 /* Estilização para o cabeçalho*/
 
 .cabecalho {
-    size:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1.25rem;
 }
 
 .cabecalho-imagem {
-    size:100%;
+    height: 4.5rem;
 }
 
 .cabecalho-menu {
-    size:100%;
+    display: flex;
+    gap: 2rem;
 }
 
 .cabecalho-menu-item {
-    size:100%;
+    font-family: 'Sarala', sans-serif;
+    color: #FFF2E7;
+    font-weight: 400;
+    font-size: 18px;
 }
 
 /* Estilização para o conteúdo */
 .conteudo {
-    size:100%;
+    margin-bottom: 48px;
+    border-top: 0.4px solid #FFF2E7
 }
     
 /* Estilização para o conteúdo principal*/
 .conteudo-principal {
-    size:100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .conteudo-principal-imagem {
-    size:100%;
+    height: 440px;
 }
 
 .conteudo-principal-escrito {
-    size:100%;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .conteudo-principal-escrito-titulo {
-    size:100%;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    color: #FFF2E7;
+    font-size: 64px;
+
 }
 
 .conteudo-principal-escrito-subtitulo {
-    size:100%;
+    font-family: 'Sarala', sans-serif;
+    color: #ECD6C4;
+    font-size: 24px;
+    font-weight: normal;
+
 }
 
 .conteudo-principal-escrito-botao {
-    size:100%;
+    font-family: 'Sarala', sans-serif;
+    color: #2F2325;
+    font-weight: 400;
+    font-size: 1.5rem;
+    background-color: #ECD6C4;
+    border-radius: 1.25rem;
+    width: 250px;
+    height: 67px;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+}
+
+.conteudo-principal-escrito-botao:hover {
+    background-color: rgba(236, 214, 196, 0.53);
 }
 
 /* Estilização para o conteúdo secundário */
+.conteudo-secundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-secundario-titulo {
+    border-top: 0.4px solid #FFF2E7 ;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    color: #FFF2E7;
+    font-size: 24px;
+    margin-bottom: 1rem;
+}
+
+.conteudo-secundario-texto {
+    font-family: 'Sarala', sans-serif;
+    color: #ECD6C4;
+    font-size: 18px;
+    font-weight: 300;
+
+}
 
 /* Estilização para o rodapé */
+.rodape {
+    padding: 32px;
+    border-top: 0.4px solid #FFF2E7;
+     
+}
+
+.rodape-imagem {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
+}
